# Pose2sim-GUI

./: .gitignore  README.md  launch_pose2sim_gui.bat  pyproject.toml
docs/: 中文使用说明.md
pose2sim_gui/: __init__.py  __main__.py  app.py  config.py  help_text.py  manual_zh.py  reports.py  runner.py  workspace.py
tests/: test_config.py  test_gui_smoke.py  test_reports.py  test_version.py  test_workspace.py
